nginx-ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nginx-ingress-svc
  name: nginx-ingress-svc
  namespace: ingress
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30080
  selector:
    name: nginx-ingress-microk8s
  type: NodePort
status:
  loadBalancer: {}
