nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: test
  namespace: ingress
spec:
  defaultBackend:
    service:
     name: nginx
     port:
      number: 80
  ingressClassName: nginx
status:
  loadBalancer: {}
